--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "firebase": "^7.14.0",
     "phaser": "3.12.0",
     "phaser-animated-tiles": "^2.0.2",
     "phaser3-rex-plugins": "^1.1.11"
