--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^6.0.0",
     "firebase": "^7.14.0",
     "phaser": "3.12.0",
     "phaser-animated-tiles": "^2.0.2",
-    "phaser3-rex-plugins": "^1.1.11"
+    "phaser3-rex-plugins": "^1.1.11",
+    "url-loader": "^4.1.0"
   }
 }
